<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_mapa">

    <fragment
        android:id="@+id/nav_mapa"
        android:name="com.PEDG1.unmapa.ui.map.MapFragment"
        android:label="@string/menu_mapa"
        tools:layout="@layout/fragment_mapa" />

    <fragment
        android:id="@+id/nav_edificios"
        android:name="com.PEDG1.unmapa.ui.edificio.EdificioFragment"
        android:label="@string/menu_edificios"
        tools:layout="@layout/fragment_edificio" />

    <fragment
        android:id="@+id/nav_oficinas"
        android:name="com.PEDG1.unmapa.ui.oficina.OficinaFragment"
        android:label="@string/menu_oficinas"
        tools:layout="@layout/fragment_oficina" />

    <fragment
        android:id="@+id/nav_historial"
        android:name="com.PEDG1.unmapa.ui.historial.HistorialFragment"
        android:label="@string/menu_historial"
        tools:layout="@layout/fragment_historial" />

    <fragment
        android:id="@+id/nav_comentarios"
        android:name="com.PEDG1.unmapa.ui.comentarios.ComentariosFragment"
        android:label="@string/menu_comentarios"
        tools:layout="@layout/fragment_comentarios" />
</navigation>